Fix for bug 192175. in trees, in a treecol with persist="sortActive" doesn't work in appropiate manner r=varga, sr=jag, patch by afatecha@idea.com.py